Close out Aug session